--- a/index.html
+++ b/index.html
@@ -1,32 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
+<html lang="en" >
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Start Bootstrap">
-    <meta name="google-site-verification" content="37Tru9bxB3NrqXCt6JT5Vx8wz2AJQ0G4TkC-j8WL3kw">
+<head>
+  <meta charset="UTF-8">
+  <title>Fork Me! FCC: Test Suite Template</title>
+  
+  
+  
+      <link rel="stylesheet" href="css/style.css">
 
-    <title>
-        Hello World
-      </title>
+  
+</head>
 
-    <meta name="description" content="">
-
-    <link rel="canonical" href="https://startbootstrap.com/previews/bare/">
-
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-6jHF7Z3XI3fF4XZixAuSu0gGKrXwoX/w3uFPxC56OtjChio7wtTGJWRW53Nhx6Ev" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="/assets/style-template.css">
-
-    <link type="application/atom+xml" rel="alternate" href="https://startbootstrap.com/feed.xml" title="startbootstrap" />
-
-
-    </head>
 <body>
-Hello World, we are software developers
+
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+<!-- 
+
+Hello Camper!
+
+For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
+
+- The freeCodeCamp Team 
+
+-->
+<header>
+  <nav id = "navbar">
+  <ul>
+    <li><a href="#welcome-section">About</a></li>
+    <li><a href="#projects">Work</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+</header>
+<body>
+
+  
+<div id="welcome-section">
+  <h1>Hello welcome to my personal portfolio</h1>
+  
+</div> 
+<div><a target="_blank" id="profile-link" href="https://github.com/23andyoung/helloworld.git"></div>
+
+<div id="projects"> <a href="https://codepen.io/FreeCodeCamp/pen/NNvBQW" target="_blank" class="project project-tile">
+    <img class="project-pic" src="https://cloud.githubusercontent.com/assets/15967809/17642794/d084d718-6171-11e6-83fa-ede5d0a67ad2.png" alt="project">
+  
+  <div class="project-title">Tribute Page</div>
+  <a href="https://codepen.io/FreeCodeCamp/pen/ONjoLe" target="_blank" class="project project-tile">
+</div> 
+  <iframe width="420" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
+  
+  </body>
+  
+  
+
+    <script  src="js/index.js"></script>
+
+
+
+
 </body>
+
 </html>
