--- a/index.html
+++ b/index.html
@@ -1,38 +1,5 @@
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<script>
-#header {   position: fixed;   top: 0; } 
-#navbar {     position: fixed;     top: 0;   }  
-
-#navbar ul{     list-style-type: none;     margin: 0;     padding: 0;     background-color: blue;     position: static;     overflow: hidden;     top: 0;     width: 100%;   }   
-#navbar li  {     float:left;      }   #navbar li a {     display: block;     color: white;     text-align: center;     padding: 14px 16px;     text-decoration: none; }   #navbar li a:hover {     background-color: #111; }      @media (max-width:500px){     #welcome-section{color:red;}   }      main {     margin-top:50}
-
-
-#welcome-section{
-  background-color:red;
-  justify-content: center; 
-  align:right;
-  display: flex;
-  width: 500px;
-  padding-top: 0px;
-  margin-top: 0px;
-  display: block;
-  height: 100vh;
-}
-@media only screen and (max-width : 768px) { /*Once 767 width reached, hide normal nav and display icon nav*/   
-body {
-  background-color: tan;
-}
- @media screen and (max-width: 992px) {
-  body {
-    background-color: blue;
-  }
-}
-  @media screen and (max-width: 600px) {
-  body {
-    background-color: olive;
-  }
-}
-</script>
+<link rel="stylesheet" href="style.css">
 <!-- 
 
 Hello Camper!
